[package]
name = "labyrinth"
version = "0.1.0"
authors = ["Kalle Huttunen"]
edition = "2018"

[lib]
crate-type = [
    "cdylib", # Android
    "rlib", # Desktop
]

[dependencies]
bytemuck = "1.4.1"
bytemuck_derive = "1.0.0"
clap = "2.33.3"
egui = "0.10.0"
futures = "0.3.7"
image = "0.23.10"
# Use the below form in web, see https://github.com/image-rs/image/issues/879
#image = { version = "0.23.10", default-features = false, features = ["jpeg", "png"] }
instant = { version = "0.1.8", features = ["wasm-bindgen"] }
json = "0.12.4"
mobile-entry-point = "0.1.1"
nalgebra-glm = "0.8.0"
ply-rs = "0.1.3"
raw-window-handle = "0.3.3"
winit = { version = "0.23.0", features = ["web-sys"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "2d01c07" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.2"
log = "0.4.11"
ndk-glue = "0.2.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "0.2.0"
wasm-bindgen-futures = "0.4.19"
web-sys = "0.3.49"
